--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>AngularJS</title>
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
-<body data-ng-controller="MainCtrl as main">
+<body data-ng-controller="MainCtrl as main" click-film>
     <div class="top_line"><span class="logo">Film DB</span>
         <data-top-menu></data-top-menu>
     </div>
